@@ -6,6 +6,7 @@
 * Add - Allow subscription orders to be paid with Link payment method.
 * Add - Add inbox notification for Link payment method.
 * Tweak - Adjust texts and links in WC admin advanced settings.
+* Add - Restrict the Link payment method only for US merchants.
 
 = 6.9.0 - 2022-10-19 =
 * Tweak - Remove remaining traces of old Stripe settings.
